<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddMeterDetailsActivity">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@android:color/background_light"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/robotoslab_bold"
            android:text=" METER DETAILS "
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/customer_no"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:id="@+id/ed_customerno"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/meter_no"
            android:gravity="center_vertical"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ed_meterno"

            android:layout_weight="1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/protocol_no"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ed_protocolno"
            android:layout_weight="1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/installtion_date"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ed_installationdate"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/installtion_type"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ed_installationtype"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/gps_coordinate"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:id="@+id/ed_cordinate"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:id="@+id/tv_address"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="4dp"
        android:layout_marginLeft="20dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/idb"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:text="Meter Image"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/img_meter"
                android:background="@drawable/meter"
                android:layout_below="@+id/idb"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/ida"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:text="Protocol Image"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/img_protocol"
                android:layout_below="@+id/ida"
                android:background="@drawable/meter"

                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="SAVE"
        android:visibility="gone"
        android:id="@+id/btsubmit"/>

</LinearLayout>