<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.Background_Location_Alert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/location">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/use_your_location"
            android:textSize="30sp"
            android:textColor="@color/black"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.5sp"
            android:text="@string/for_marking_attendence_punch_in_or_punch_out"
            android:singleLine="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.5sp"
            android:text="allow SIPS MIG to use your location all of the time."
            android:singleLine="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sips_hrms_collects_location_data_with_geo_fencing_for_marking_attendance_correctly_when_the_app_is_closed_or_not_in_use"
            android:textSize="14.5sp">

        </TextView>

        <ImageView
            android:layout_width="307dp"
            android:layout_height="249dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/map">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >
            <Button
                android:id="@+id/bt_deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:background="@color/white"
                android:visibility="gone"
                android:text="DENY"
                >

            </Button>

            <Button
                android:id="@+id/bt_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:text="Continue..."
                >
            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>