<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Duty_Start_Activity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/background_light">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/robotoslab_bold"
            android:text=" Start Duty "
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OTHERS"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone"></TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/customer_no" />

                    <EditText
                        android:id="@+id/ed_customerno"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/meter_no" />

                    <EditText
                        android:id="@+id/ed_meterno"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Vehicle Start Reading"
                        android:textColor="#000"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/ddmarks"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:maxLength="15"
                        android:inputType="numberDecimal"
                        android:minHeight="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/protocol_no" />

                    <EditText
                        android:id="@+id/ed_protocolno"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:inputType="number"
                        android:minHeight="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/installtion_date"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/ed_installationdate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp"
                        android:visibility="gone" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/installtion_type" />

                    <Spinner
                        android:id="@+id/ed_installationtype"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/meter_mark"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp"
                        android:visibility="gone"></EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gps_coordinate"
                        android:textColor="#000"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/ed_cordinate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/focusable_border"
                        android:gravity="center"
                        android:minHeight="50dp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="4dp"
                    android:padding="2dp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_addimgmeter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@color/grey1"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/idb"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:drawableRight="@drawable/ic_baseline_add"
                            android:gravity="center"
                            android:text=" Reading Image"
                            android:textColor="#000" />

                        <ImageView
                            android:id="@+id/img_meter"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_below="@+id/idb"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="3dp"
                            android:background="@color/white"
                            android:scaleType="fitXY"
                            tools:src="@mipmap/ic_launcher" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_addimgprotocol"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey1"
                        android:padding="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/ida"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:drawableRight="@drawable/ic_baseline_add"
                            android:gravity="center"
                            android:text="Protocol Image" />

                        <ImageView
                            android:id="@+id/img_protocol"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:layout_below="@+id/ida"
                            android:layout_centerHorizontal="true"
                            android:background="@color/white" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_selector"
                    android:text="SAVE"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
